--- a/sample04.html
+++ b/sample04.html
@@ -30,10 +30,30 @@
         ondragenter="dragenter(event)"
         ondragleave="dragleave(event)"
         ondrop="drop(event)"
-        ondragover="allowDrop(event)"
         style="width: 200px; height: 200px; border: 1px solid #333;"></div>
     <script>
         var dropZoneOriginBackgroundColor = null;
+
+
+        //
+        var createHolderBySingleton = function(targetNode){
+            var spaceItem = document.querySelector('.holder') || document.createElement('div');
+            spaceItem.className = 'holder'
+            spaceItem.style.height = "40px"
+            spaceItem.textContent = '';
+            spaceItem.style.backgroundColor = 'yellow';
+            if(targetNode === document.querySelector('.drop-zone')){
+                document.querySelector('.drop-zone').appendChild(spaceItem);
+            }
+            else{
+                document.querySelector('.drop-zone').insertBefore(spaceItem, targetNode);
+            }
+        };
+
+        var removeHolder = function(){
+            document.querySelector('.holder') ? document.querySelector('.holder').remove() : null;
+        };
+
 
         // handle elementNode drag/drop
         (function(scope){
@@ -45,20 +65,18 @@
             }
 
             scope.dragend = function(e){
+                console.log(document.querySelector('.holder'), 'trigger-2');
                 currentElement.style.border = ""
                 currentElement = null;
-
-                //
-                // document.querySelector('.holder') ? document.querySelector('.holder').remove() : null;
-                document.querySelector('.holder') ? document.querySelector('.holder').hidden = true : null;
+                removeHolder();
             }
 
+            // 看來 drop 的事件觸發在 dragend 之前！
             scope.drop = function(e) {
                 e.preventDefault();
-                if(e.target.className === 'drop-zone') {
-                    e.target.appendChild(currentElement);
-                    e.target.style.backgroundColor = dropZoneOriginBackgroundColor;
-                };
+                console.log(document.querySelector('.holder'), 'trigger-1');
+                document.querySelector('.drop-zone').insertBefore(currentElement, document.querySelector('.holder'));
+                removeHolder();
             }
         })(window);
 
@@ -67,47 +85,16 @@
         (function(scope){
             scope.dragenter = function(e) {
                 console.log('Drag Enter');
-
-                if(e.target.className === 'drop-zone') {  // To avoid repace color of the dropItem.
-                    dropZoneOriginBackgroundColor = e.target.style.backgroundColor;
-                    e.target.style.backgroundColor = "lightblue";
-
-
-                    // create 預先佔位物件
-                    var spaceItem = document.querySelector('.holder') || document.createElement('div');
-                    spaceItem.className = 'holder'
-                    spaceItem.style.height = "40px"
-                    spaceItem.textContent = '';
-                    spaceItem.style.backgroundColor = 'yellow';
-                    document.querySelector('.drop-zone').appendChild(spaceItem);
-                }
-                else if(e.target.className === 'holder') {
-
-                }
-                else if(e.target.className === 'draggable-item') {
-                    // create 預先佔位物件
-                    var droppedItem = e.target;
-                    var spaceItem = document.querySelector('.holder') || document.createElement('div');
-                    spaceItem.className = 'holder'
-                    spaceItem.style.height = "40px"
-                    spaceItem.textContent = '';
-                    spaceItem.style.backgroundColor = 'yellow';
-                    document.querySelector('.drop-zone').insertBefore(spaceItem, droppedItem);
-                }
             };
 
             scope.dragleave = function(e) {
-                console.log('Drag Leave');
-                if(e.target.className === 'drop-zone') {  // To avoid repace color of the dropItem.
-                    e.target.style.backgroundColor = dropZoneOriginBackgroundColor;
-                    dropZoneOriginBackgroundColor = null;
-                }
+                console.log('Drag Leave', e.target);
             };
 
             scope.dragover = function(e){
                 e.preventDefault();  // This config is allow element to be drop!
-
                 console.log('Drag Over and Moving!');
+                createHolderBySingleton(e.target);
             };
         })(window);
     </script>
