--- a/sample05.html
+++ b/sample05.html
@@ -8,45 +8,84 @@
     ref: https://css-tricks.com/pseudo-element-roundup/
 </div>
 <br />
-<div style="margin-left: 100px; margin-right: 100px;">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>
+<ul style="margin-left: 100px; margin-right: 100px;">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>
         5
-        <div style="margin-left: 1em;">
-            6
-            <div style="margin-left: 1em;">
-                7
-                <div style="margin-left: 1em;">8</div>
-                <div style="margin-left: 1em;">9</div>
-            </div>
-        </div>
-    </div>
-</div>
+        <ol>
+            <li>
+                6
+                <ol>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                </ol>
+            </li>
+        </ol>
+    </li>
+</ul>
 <style>
-    div div {
-        /* make pseudo anchor by container node */
+    ul, ol {
+        margin: 0px;
+    }
+
+    li {
+        list-style-type: none;
+    }
+
+    /*
+     * 設定 Position 讓每一個 Pesudo 的 Anchor 都設定在本身附著的 Element Node 上！
+     */
+    ul li {
         position: relative;
         margin: 0px;
     }
 
-    div div:before {
+    /*
+     * 讓左側的 Pesudo Element 高度不足造成斷線，在利用 After Pesudo 覆蓋將線段連上！
+     * 或是你可以直接讓 Before Pesudo Element Left Border Line 高度為 0！
+     */
+    ul li:before {
         content: '';  /* 必須放置一個空的 Content */
+        position: absolute;  /* 必須使用 absolute 才可以讓 pseudo element line 正常顯示 */
 
         /* 必須放置一個空的 Content */
-        top: -0.6em;
-        left: -1.5em;
+        top: 0.5em;
+        left: -2.25em;
 
         /* bottom-line */
         border-bottom: 1px solid red;
-        position: absolute;  /* 必須使用 absolute 才可以讓 pseudo element line 正常顯示 */
-        width: 1em;
+        width: 2em;
 
         /* left-line */
         border-left: 1px solid red;
-        height: 1.1em;  /* 讓線條可以垂直覆蓋到讓看起來像是樹狀圖的線條 */
+        height: 0.0em;  /* 讓線條可以垂直覆蓋到讓看起來像是樹狀圖的線條 */
+    }
+
+
+    /*
+     * 左側垂直的 Border-Line 樣式與位置！
+     */
+    ul li:after {
+        content: '';
+        position: absolute;
+
+        top: -0.6em;
+        left: -2.25em;
+
+        border-left: 1px solid red;
+        height: 1.1em;
+    }
+
+    /*
+     * 由於 li 第一個物件 垂直線段會跟物件字樣重疊所以再 Override 一次 Pesudo Element 樣式讓他吻合！
+     */
+    ul li:first-child:after {
+        top: 0.0em;
+        height: 0.5em;
     }
 </style>
 </body>
