--- a/sample06-integrate-angularjs.html
+++ b/sample06-integrate-angularjs.html
@@ -7,6 +7,7 @@
 </head>
 <body ng-app="sample01" ng-controller="base">
     <pre>ref: http://codef0rmer.github.io/angular-dragdrop/#/</pre>
+    <pre>ref: https://docs.angularjs.org/api/ng/service/$parse</pre>
     <pre>
         {{ top }}
     </pre>
